--- a/firstWebsite/about.html
+++ b/firstWebsite/about.html
@@ -15,13 +15,17 @@
   <li><a href="about.html" class="active">About</a></li>
   <li><a href="index.html">Home</a></li>
   </ul>
-  <h1>About page</h1>
+  <div class="picBackDrop" id="bg2">
+       <h1>About</h1>
+   </div>
   <p>Non non anim consequat laborum irure cupidatat consequat qui irure cupidatat aute elit minim commodo. Excepteur incididunt commodo et elit quis ullamco et reprehenderit nulla amet nulla sint. Non aute voluptate dolore amet exercitation nostrud eiusmod non magna. Consectetur labore officia dolore Lorem consectetur nulla irure occaecat nisi pariatur occaecat voluptate labore. Sint magna dolor voluptate voluptate tempor velit aute duis.</p>
   <p></p>
   <p></p>
 <img src="images/logo.png" alt="DevMountain logo">
 </body>
 
-<footer>Copyright Sam Bonfanti</footer>
+<footer id="footText">
+    <p id="footText">Copyright Sam Bonfanti</p>
+</footer>
 
 </html>
