--- a/firstWebsite/contact.html
+++ b/firstWebsite/contact.html
@@ -16,10 +16,14 @@
     <li><a href="about.html">About</a></li>
     <li><a href="index.html">Home</a></li>
   </ul>
-  <h1>Contact</h1>
+  <div class="picBackDrop" id="bg3">
+       <h1>Contact</h1>
+   </div>
   <p>Elit aute pariatur laboris irure nostrud magna. Occaecat id adipisicing sunt Lorem fugiat aute est eiusmod excepteur. Tempor est nostrud magna veniam adipisicing cillum amet. Culpa aliqua et ad consectetur pariatur minim Lorem velit dolor dolor velit. Laborum sunt magna occaecat adipisicing enim quis nisi esse exercitation laborum proident proident dolore non. Sunt enim labore elit non amet sint sint deserunt. Minim adipisicing sint anim in sit pariatur.</p>
   <img src="images/logo.png" alt="DevMountain">
 </body>
-<footer>Copyright Sam Bonfanti</footer>
+<footer id="footText">
+    <p id="footText">Copyright Sam Bonfanti</p>        
+</footer>
 
 </html>
